--- a/overlay-evolution/packages/apps/Settings/res/values/config.xml
+++ b/overlay-evolution/packages/apps/Settings/res/values/config.xml
@@ -26,4 +26,10 @@
 
     <!-- Whether to show min refresh rate in display settings -->
     <bool name="config_show_min_refresh_rate_switch">true</bool>
+
+    <!-- Smart charging -->
+    <bool name="config_smartChargingAvailable">true</bool>
+
+    <!-- Smooth display -->
+    <bool name="config_show_smooth_display">true</bool>
 </resources>
