--- a/overlay-evolution/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-evolution/frameworks/base/core/res/res/values/config.xml
@@ -107,7 +107,7 @@
     <bool name="config_supportsScreenOffInDisplayFingerprint">true</bool>
 
     <!-- Allow devices override audio panel location to the left side -->
-    <bool name="config_audioPanelOnLeftSide">true</bool>pers
+    <bool name="config_audioPanelOnLeftSide">true</bool>
 
     <!-- Does the device have a notification led -->
     <bool name="config_hasNotificationLed">false</bool>
