--- a/DeviceSettings/res/xml/main.xml
+++ b/DeviceSettings/res/xml/main.xml
@@ -20,6 +20,11 @@
             android:icon="@drawable/ic_dc_mode_icon"
             android:summary="@string/dc_mode_summary"
             android:title="@string/dc_mode_title" />
+            
+        <Preference
+            android:icon="@drawable/ic_info_outline_24dp"
+            android:persistent="false"
+            android:summary="@string/hbm_mode_warning" />
 
         <SwitchPreference
             android:key="hbm"
@@ -38,17 +43,117 @@
             android:key="auto_hbm_threshold"
             android:title="@string/auto_hbm_threshold_title"
             android:summary="@string/auto_hbm_threshold_summary" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="refresh"
+        android:title="@string/refresh_title">
+        
+        <Preference
+            android:icon="@drawable/ic_info_outline_24dp"
+            android:persistent="false"
+            android:summary="@string/refresh_rate_warning" />
+
+        <SwitchPreference
+            android:key="auto_refresh_rate"
+            android:icon="@drawable/ic_auto_refresh_icon"
+            android:summary="@string/auto_refresh_rate_summary"
+            android:title="@string/auto_refresh_rate_title"
+            android:persistent="true" />
+
+        <SwitchPreference
+            android:key="refresh_rate"
+            android:icon="@drawable/ic_forced_refresh_icon"
+            android:summary="@string/refresh_rate_summary"
+            android:title="@string/refresh_rate_title"
+            android:persistent="false" />
+
+        <SwitchPreference
+            android:key="fps_info"
+            android:icon="@drawable/ic_fps_overlay_icon"
+            android:title="@string/fps_info_title"
+            android:summary="@string/fps_info_summary"
+            android:persistent="true" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="audio"
+        android:title="@string/audio_title">
+
+        <SwitchPreference
+            android:key="enable_dolby_atmos"
+            android:summary="@string/enable_dolby_summary"
+            android:title="@string/enable_dolby_title"
+            android:icon="@drawable/ic_dolby"
+            android:defaultValue="true"
+            android:persistent="true" />
 
         <Preference
-            android:key="panel_category"
-            android:icon="@drawable/ic_panel_modes_icon"
-            android:title="@string/panel_category_title"
-            android:summary="@string/panel_category_summary"
-            android:persistent="false" >
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="org.evolution.device.DeviceSettings"
-                    android:targetClass="org.evolution.device.DeviceSettings.PanelSettingsActivity" />
+            android:key="audio_dolby_atmos"
+            android:title="@string/dolby_title"
+            android:summary="@string/dolby_summary"
+            android:icon="@drawable/ic_dolby_atmos"
+            android:dependency="enable_dolby_atmos"
+            android:persistent="false">
+            <intent
+                 android:targetPackage="com.motorola.dolby.dolbyui"
+                 android:targetClass="com.motorola.dolby.dolbyui.ui.welcome.WelcomeActivity" />
         </Preference>
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="selinux"
+        android:title="@string/selinux_category">
+
+       <Preference
+          android:summary="@string/selinux_explanation_summary"
+          android:selectable="false"/>
+
+       <SwitchPreference
+          android:key="selinux_mode"
+          android:icon="@drawable/ic_linux"
+          android:title="@string/selinux_mode_title"
+          android:summaryOn="@string/selinux_enforcing_summary"
+          android:summaryOff="@string/selinux_permissive_summary" />
+
+        <SwitchPreference
+          android:key="selinux_persistence"
+          android:icon="@drawable/ic_power"
+          android:title="@string/selinux_persistence_title"
+          android:summary="@string/selinux_persistence_summary"
+          android:defaultValue="true" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="slider"
+        android:title="@string/notification_slider_category_title">
+
+        <ListPreference
+            android:key="keycode_top_position"
+            android:icon="@drawable/ic_up_icon"
+            android:dialogTitle="@string/notification_slider_selection_dialog_title"
+            android:title="@string/notification_slider_top_position"
+            android:summary="%s"
+            android:entries="@array/notification_slider_action_entries"
+            android:entryValues="@array/notification_slider_action_entry_values" />
+
+        <ListPreference
+            android:key="keycode_middle_position"
+            android:icon="@drawable/ic_middle_icon"
+            android:dialogTitle="@string/notification_slider_selection_dialog_title"
+            android:title="@string/notification_slider_middle_position"
+            android:summary="%s"
+            android:entries="@array/notification_slider_action_entries"
+            android:entryValues="@array/notification_slider_action_entry_values" />
+
+        <ListPreference
+          android:key="keycode_bottom_position"
+          android:icon="@drawable/ic_down_icon"
+          android:dialogTitle="@string/notification_slider_selection_dialog_title"
+          android:title="@string/notification_slider_bottom_position"
+          android:summary="%s"
+          android:entries="@array/notification_slider_action_entries"
+          android:entryValues="@array/notification_slider_action_entry_values" />
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -86,80 +191,17 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="refresh"
-        android:title="@string/refresh_title">
-
-        <SwitchPreference
-            android:key="auto_refresh_rate"
-            android:icon="@drawable/ic_auto_refresh_icon"
-            android:summary="@string/auto_refresh_rate_summary"
-            android:title="@string/auto_refresh_rate_title"
-            android:persistent="true" />
-
-        <SwitchPreference
-            android:key="refresh_rate"
-            android:icon="@drawable/ic_forced_refresh_icon"
-            android:summary="@string/refresh_rate_summary"
-            android:title="@string/refresh_rate_title"
-            android:persistent="false" />
-
+        android:key="vibrator"
+        android:title="@string/category_vibrator">
         <Preference
             android:icon="@drawable/ic_info_outline_24dp"
             android:persistent="false"
-            android:summary="@string/refresh_rate_warning" />
-
-        <SwitchPreference
-            android:key="fps_info"
-            android:icon="@drawable/ic_fps_overlay_icon"
-            android:title="@string/fps_info_title"
-            android:summary="@string/fps_info_summary"
-            android:persistent="true" />
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="slider"
-        android:title="@string/notification_slider_category_title">
-
-        <ListPreference
-            android:key="keycode_top_position"
-            android:icon="@drawable/ic_up_icon"
-            android:dialogTitle="@string/notification_slider_selection_dialog_title"
-            android:title="@string/notification_slider_top_position"
-            android:summary="%s"
-            android:entries="@array/notification_slider_action_entries"
-            android:entryValues="@array/notification_slider_action_entry_values" />
-
-        <ListPreference
-            android:key="keycode_middle_position"
-            android:icon="@drawable/ic_middle_icon"
-            android:dialogTitle="@string/notification_slider_selection_dialog_title"
-            android:title="@string/notification_slider_middle_position"
-            android:summary="%s"
-            android:entries="@array/notification_slider_action_entries"
-            android:entryValues="@array/notification_slider_action_entry_values" />
-
-        <ListPreference
-          android:key="keycode_bottom_position"
-          android:icon="@drawable/ic_down_icon"
-          android:dialogTitle="@string/notification_slider_selection_dialog_title"
-          android:title="@string/notification_slider_bottom_position"
-          android:summary="%s"
-          android:entries="@array/notification_slider_action_entries"
-          android:entryValues="@array/notification_slider_action_entry_values" />
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="vibrator"
-        android:title="@string/category_vibrator">
+            android:summary="@string/vibration_warning" />
 
         <org.evolution.device.DeviceSettings.VibratorStrengthPreference
             android:key="vib_strength"
             android:icon="@drawable/ic_vibration_icon"
             android:title="@string/vib_strength_title_head"
             android:summary="@string/vib_strength_summary_head" />
-        <Preference
-            android:icon="@drawable/ic_info_outline_24dp"
-            android:persistent="false"
-            android:summary="@string/vibration_warning" />
     </PreferenceCategory>
 </PreferenceScreen>
