--- a/overlay-evolution/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-evolution/frameworks/base/core/res/res/values/config.xml
@@ -151,7 +151,7 @@
 
     <!-- Defines the sysfs attribute path used by the device
          to enable/disable DC dimming. -->
-    <string name="config_deviceDcDimmingSysfsNode">/sys/class/drm/card0-DSI-1/dimlayer_bl_en</string>
+    <string name="config_deviceDcDimmingSysfsNode">/sys/devices/platform/soc/ae00000.qcom,mdss_mdp/drm/card0/card0-DSI-1/dimlayer_bl_en</string>
 
     <!-- Defines custom Vendor sensor for pocket detection. -->
     <string name="config_pocketJudgeVendorSensorName">oneplus.sensor.pocket</string>
