--- a/overlay-evolution/packages/apps/Settings/res/values/config.xml
+++ b/overlay-evolution/packages/apps/Settings/res/values/config.xml
@@ -32,4 +32,7 @@
 
     <!-- Whether to show the Preference for Touch Sensitivity -->
     <bool name="config_show_touch_sensitivity">true</bool>
+
+    <!-- Whether SELinux status should be shown or not. -->
+    <bool name="config_show_selinux_status">true</bool>
 </resources>
